--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
+
 .about-me {
     margin-top: 80px; /* Ajusta según sea necesario */
 }
@@ -51,15 +52,42 @@ header {
     margin: 0 auto;
     padding: 20px;
     margin-top: 80px;
-
-}
-.about-me{
-color: #ffffff;
 }
 
-.skills-chart{
+.about-me {
     color: #ffffff;
 }
+
+.skills-chart {
+    max-width: 98%;
+    margin: 10px auto;
+}
+
+.skill-bar {
+    display: flex;
+    align-items: center;
+    margin-bottom: 0px;
+}
+
+.skill-name {
+    flex: 1;
+    color: #ffffff;
+}
+
+.skill-bar-progress {
+    flex: 1;
+    background-color: #969696;
+    height: 10px;
+    border-radius: 15px;
+    margin: 20px;
+}
+
+.skill-progress {
+    height: 100%;
+    border-radius: 10px;
+}
+
+
 section {
     padding: 40px 0;
     text-align: center;
@@ -71,6 +99,7 @@ section {
 
 h2 {
     color: #ffffff; /* Gris claro */
+    font-size: 12;
 }
 
 ul {
@@ -117,6 +146,7 @@ footer a {
 footer a:hover {
     color: #207bb5; /* Azul más oscuro */
 }
+
 .scroll-down {
     position: absolute;
     bottom: 20px;
@@ -183,11 +213,9 @@ footer a:hover {
 }
 
 .skills-chart {
-    max-width: 400px;
+    max-width: 98%;
     margin: 20px auto;
 }
-
-/* ... (código anterior) ... */
 
 .portfolio-images {
     display: flex;
@@ -196,11 +224,46 @@ footer a:hover {
     margin-top: 20px;
 }
 
-.portfolio-images img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
+.portfolio-item {
+    border-radius: 15px; /* Ajusta según sea necesario */
+    overflow: hidden;
     margin-bottom: 20px;
+}
+
+.portfolio-item img {
+    width: 100%;
+    border-radius: 15px; /* Ajusta según sea necesario */
+}
+
+#experience {
+    /* Estilos generales para la sección de experiencia */
+}
+
+.experience-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: initial;
+    margin-bottom: 30px;
+}
+
+.experience-info {
+    flex: 1;
+    color: #ffffff;
+    /* Estilos para la información del trabajo */
+}
+
+.experience-image {
+    width: 150px; /* Ajusta según sea necesario */
+    height: 150px; /* Ajusta según sea necesario */
+    overflow: hidden;
+    border-radius: 10px; /* Ajusta según sea necesario */
+}
+
+.experience-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px; /* Ajusta según sea necesario */
 }
 
 @media screen and (min-width: 769px) {
@@ -300,23 +363,7 @@ footer a:hover {
         margin-right: 5px;
     }
 
-
-/* Estilos para dispositivos móviles */
-@media screen and (max-width: 768px) {
-    header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 15px;
-    }
-
-    .mobile-header {
-        background-color: #3498db; /* Azul Francia */
-        padding: 15px;
-        text-align: center;
-    }
-
-    .mobile-header a {
+    .contact-menu a {
         text-decoration: none;
         color: #fff;
         font-weight: bold;
@@ -325,58 +372,7 @@ footer a:hover {
         transition: color 0.3s ease;
     }
 
-    .mobile-header a:hover {
-        color: #207bb5; /* Azul más oscuro */
+    .contact-menu a:hover {
+        color: #134361; /* Azul más oscuro */
     }
 
-    .contact-bar {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        z-index: 999;
-    }
-
-    .float-button {
-        background-color: #3498db; /* Azul Francia */
-        color: #fff;
-        border: none;
-        padding: 15px 20px;
-        border-radius: 50px;
-        font-size: 16px;
-        cursor: pointer;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        transition: background-color 0.3s ease;
-    }
-
-    .float-button:hover {
-        background-color: #207bb5; /* Azul más oscuro */
-    }
-
-    .contact-menu {
-        display: none;
-        position: fixed;
-        bottom: 80px;
-        right: 20px;
-        z-index: 999;
-    }
-
-    .contact-bubble {
-        background-color: #3498db; /* Azul Francia */
-        color: #fff;
-        border: none;
-        padding: 10px;
-        border-radius: 50%;
-        font-size: 16px;
-        cursor: pointer;
-        margin-right: 10px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-    }
-
-    .contact-bubble img {
-        width: 30px;
-        height: 30px;
-        margin-right: 5px;
-    }
-}
