--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
+    background-image: url("img/'tu-imagen-de-fondo.jpg"); /* Ruta de tu imagen de fondo */
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; /* Esto fija la imagen de fondo al desplazarse */
 }
 
 .container {
@@ -10,14 +14,51 @@ body {
 }
 
 .about-me {
-    margin-top: 80px; /* Ajusta según sea necesario */
+    margin-top: 220px; /* Ajusta según sea necesario */
+    color: #ffffff;
+    padding-top: 0px; /* Ajusta según sea necesario */
+    margin-left: 20px; /* Ajusta según sea necesario */
+}
+.about-me-content {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 80px;
+    font-size: 18px;
+}
+.about-me-section {
+    max-width: 800px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.bubble {
+    background-color: #5f5f5f; /* Gris más oscuro */
+    border-radius: 15px;
+    padding: 20px;
+    margin: 10px;
+    flex: 1;
+    font-size: 18px;
 }
 
-header {
+.bubble h3 {
+    color: #ffffff;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.bubble p {
+    color: #ecf0f1;
+    font-size: 16px;
+}
+.desktop-header {
     background-color: #008bfd; /* Gris más oscuro */
     color: #fff;
-    text-align: center;
-    padding: 20px 0;
+    text-align: justify;
+    padding: 1px 0;
+    margin-bottom: 0px;
+    height: 60px;
 }
 
 .profile-header {
@@ -54,24 +95,21 @@ header {
     margin-top: 80px;
 }
 
-.about-me {
-    color: #ffffff;
-}
-
 .skills-chart {
     max-width: 98%;
-    margin: 10px auto;
+    margin: 20px auto;
 }
 
 .skill-bar {
     display: flex;
     align-items: center;
-    margin-bottom: 0px;
+    margin-bottom: 10px; /* Ajustado para un mejor espaciado */
 }
 
 .skill-name {
     flex: 1;
     color: #ffffff;
+    font-size: 16px; /* Ajustado el tamaño de la fuente */
 }
 
 .skill-bar-progress {
@@ -87,7 +125,6 @@ header {
     border-radius: 10px;
 }
 
-
 section {
     padding: 40px 0;
     text-align: center;
@@ -96,10 +133,14 @@ section {
     background-color: #3a3a3a; /* Gris más oscuro */
     margin: 20px;
 }
-
+h1 {
+    text-align: initial;
+    color: #ffffff;
+    margin-right: 100px;
+}
 h2 {
     color: #ffffff; /* Gris claro */
-    font-size: 12;
+    font-size: 40px; /* Ajustado el tamaño de la fuente */
 }
 
 ul {
@@ -108,8 +149,8 @@ ul {
 }
 
 ul li {
-    background-color: #ffffff; /* Gris más oscuro */
-    color: #ecf0f1; /* Blanco */
+    background-color: #3498db; /* Gris más oscuro */
+    color: #000000; /* Blanco */
     border-radius: 5px;
     margin: 5px;
     padding: 8px 16px;
@@ -120,7 +161,6 @@ ul li {
 ul li:hover {
     background-color: #ffffff; /* Gris oscuro */
 }
-
 footer {
     position: fixed;
     bottom: 0;
@@ -146,14 +186,25 @@ footer a {
 footer a:hover {
     color: #207bb5; /* Azul más oscuro */
 }
+.mobile-menu {
+    display: none; /* Ocultar por defecto en pantallas grandes */
+}
 
+.burger-icon {
+    cursor: pointer;
+    font-size: 24px; /* Tamaño del icono, ajusta según sea necesario */
+}
+
+.mobile-nav {
+    display: none;
+}
 .scroll-down {
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
     cursor: pointer;
-    color: #ecf0f1; /* Blanco */
+    color: #0897bb; /* Blanco */
 }
 
 .scroll-down span {
@@ -184,6 +235,7 @@ footer a:hover {
     padding: 10px;
     background-color: #222222; /* Gris oscuro */
     transition: background-color 0.3s ease;
+    text-align: center;
 }
 
 .contact-links a:hover {
@@ -220,30 +272,32 @@ footer a:hover {
 .portfolio-images {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 20px;
+    justify-content: space-between; /* Alinea las imágenes a lo largo del contenedor con espacios entre ellas */
+    margin-top: 20px; /* Ajusta según sea necesario */
+    max-width: 100%;
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
+/* Estilo para cada elemento individual de la cartera */
 .portfolio-item {
-    border-radius: 15px; /* Ajusta según sea necesario */
-    overflow: hidden;
-    margin-bottom: 20px;
+    flex: 0 0 calc(33.333% - 20px); /* Calcula el ancho del 33.333% del contenedor con un margen entre elementos */
+    margin-bottom: 20px; /* Ajusta según sea necesario */
+    box-sizing: border-box; /* Incluye el relleno y el borde en el ancho y la altura del elemento */
 }
 
+/* Estilo para las imágenes dentro de los elementos de la cartera */
 .portfolio-item img {
     width: 100%;
-    border-radius: 15px; /* Ajusta según sea necesario */
+    border-radius: 15px; /* Otras propiedades según tus necesidades */
 }
-
-#experience {
-    /* Estilos generales para la sección de experiencia */
-}
-
 .experience-item {
     display: flex;
     justify-content: space-between;
-    align-items: initial;
+    align-items: center;
     margin-bottom: 30px;
+    max-width: 100%;
+
 }
 
 .experience-info {
@@ -253,10 +307,11 @@ footer a:hover {
 }
 
 .experience-image {
-    width: 150px; /* Ajusta según sea necesario */
-    height: 150px; /* Ajusta según sea necesario */
-    overflow: hidden;
+    width: 250px; /* Ajusta según sea necesario */
+    height: 250px; /* Ajusta según sea necesario */
     border-radius: 10px; /* Ajusta según sea necesario */
+    margin-right: 40px;
+
 }
 
 .experience-image img {
@@ -272,9 +327,9 @@ footer a:hover {
         top: 0;
         left: 0;
         width: 100%;
-        background-color: #3498db; /* Azul Francia */
-        padding: 15px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+        background-color: #12496d; /* Azul Francia */
+        padding: 0px;
+        box-shadow: 0 0 60px rgba(0, 0, 0, 0.3);
         z-index: 1000;
         display: flex;
         justify-content: center; /* Modificado para que los nombres estén más a la izquierda */
@@ -284,24 +339,7 @@ footer a:hover {
         margin-left: 20px;
     }
 }
-}
-.float-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 999;
-    background-color: #3498db; /* Azul Francia */
-    color: #fff;
-    border: none;
-    padding: 15px 20px;
-    border-radius: 50px;
-    font-size: 16px;
-    cursor: pointer;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    transition: background-color 0.3s ease;
-    display: flex;
-    align-items: center;
-}
+
     header img {
         width: 50px;
         height: 50px;
@@ -341,6 +379,8 @@ footer a:hover {
         z-index: 999;
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
     .contact-bubble {
@@ -355,12 +395,15 @@ footer a:hover {
         text-align: center;
         display: flex;
         align-items: center;
+        justify-content: center;
     }
 
     .contact-bubble img {
         width: 30px;
         height: 30px;
         margin-right: 5px;
+        align-items: center;
+        justify-content: center;
     }
 
     .contact-menu a {
@@ -370,9 +413,47 @@ footer a:hover {
         font-size: 16px;
         margin: 0 10px;
         transition: color 0.3s ease;
+        align-items: center;
+        justify-content: center;
     }
 
     .contact-menu a:hover {
         color: #134361; /* Azul más oscuro */
+        align-items: center;
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 768px) {
+    .desktop-header {
+        display: none; /* Ocultar barra de escritorio en pantallas pequeñas */
     }
 
+    .mobile-menu {
+        display: block;
+        text-align: right;
+        padding: 15px;
+        background-color: #3498db; /* Color de fondo para el menú */
+    }
+
+    .mobile-nav {
+        display: block;
+        position: absolute;
+        top: 60px; /* Ajusta según sea necesario para evitar solapamiento con la barra superior */
+        right: 15px;
+        background-color: #3498db; /* Color de fondo para las opciones del menú */
+        border-radius: 5px;
+        padding: 10px;
+    }
+
+    .mobile-nav a {
+        display: block;
+        color: #fff;
+        text-decoration: none;
+        margin-bottom: 10px; /* Espaciado entre elementos del menú */
+        transition: color 0.3s ease;
+    }
+
+    .mobile-nav a:hover {
+        color: #207bb5; /* Color de resaltado al pasar el ratón sobre los elementos del menú */
+    }
+}
