--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 .bubble {
-    background-color: #5f5f5f; /* Gris más oscuro */
+    background-color: #363636; /* Gris más oscuro */
     border-radius: 15px;
     padding: 20px;
     margin: 10px;
@@ -130,7 +130,7 @@ section {
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
-    background-color: #3a3a3a; /* Gris más oscuro */
+    background-color: #2b2b2b; /* Gris más oscuro */
     margin: 20px;
 }
 h1 {
