--- a/styles.css
+++ b/styles.css
@@ -479,7 +479,7 @@ footer a:hover {
     }
 
     .mobile-nav {
-        display: block;
+        display: none;
         position: absolute;
         top: 60px; /* Ajusta según sea necesario para evitar solapamiento con la barra superior */
         right: 15px;
@@ -489,7 +489,7 @@ footer a:hover {
     }
 
     .mobile-nav a {
-        display: block;
+        display: none;
         color: #fff;
         text-decoration: none;
         margin-bottom: 10px; /* Espaciado entre elementos del menú */
